# IconToggle

./: CMakeLists.txt  IconToggleApp.cpp
ConfigManager/: ConfigManager.cpp  ConfigManager.h  ConfigWorker.cpp  ConfigWorker.h
IconToggleApp/: CMakeLists.txt  IconToggle.cpp  IconToggle.h  IconToggleApp.cpp
IconToggleApp/resources/: resources.rc
IconToggleApp/sources/: IconToggle.cpp  IconToggle.h  TrayHeader.cpp  TrayHeader.h
SettingsApp/: CMakeLists.txt  SettingsApp.cpp
SettingsApp/forms/: SettingsWindow.ui
SettingsApp/headers/: SettingsWindow.h
SettingsApp/sources/: SettingsWindow.cpp
TrayWin/: TrayHeader.cpp  TrayHeader.h
forms/: SettingsWindow.ui
headers/: IconToggle.h  SettingsWindow.h  TrayHeader.h  resource.h
sources/: IconToggle.cpp  SettingsWindow.cpp
